# MergePowerPointPresentations

./: .flake8  .gitignore  .markdownlint.json  .pre-commit-config.yaml  .pylintrc  =5.2.0  ARCHITECTURE.md  CONTRIBUTING.md  INSTRUCTIONS.md  PLANNED_FEATURE_ENHANCEMENTS.md  README.md  REFACTOR.md  REFACTORING_SUMMARY.md  Test_Envir.md  app.py  app_logger.py  check_import.py  core.py  demo_phase3.py  example.py  gui.py  logger.py  main.py  merge_presentations.py  powerpoint_core.py  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  run_with_logging.py
.github/workflows/: ci.yml  test.yml
docs/: ARCHITECTURE.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  CUSTOMTKINTER_MIGRATION.md  GUI_GUIDE.md  INSTRUCTIONS.md  MIGRATION.md  PHASE3_FEATURES.md  PLANNED_FEATURE_ENHANCEMENTS.md  REFACTORING_SUMMARY.md
examples/: README.md  example_gui.py  example_refactored_gui.py
merge_powerpoint/: __init__.py  app.py  app_logger.py  gui.py  main.py  powerpoint_core.py
new_gui/: main_gui.py
resources/: icons.qrc
src/merge_powerpoint/: __init__.py  __main__.py  app.py  app_logger.py  gui.py  gui_refactored.py  icons_rc.py  powerpoint_core.py
tests/: INSTRUCTIONS.md  README.md  __init__.py  conftest.py  test_app.py  test_app_logger.py  test_browse_button.py  test_gui.py  test_gui_refactored.py  test_logger.py  test_powerpoint_core.py
